--- a/index.html
+++ b/index.html
@@ -1,67 +1,62 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f4f4f4;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Name - Full-Stack Developer</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <div class="container">
+            <h1>Your Name</h1>
+            <p>Full-Stack Developer</p>
+        </div>
+    </header>
 
-.container {
-    width: 80%;
-    margin: 0 auto;
-}
+    <section id="about">
+        <div class="container">
+            <h2>About Me</h2>
+            <p>Hi, I'm [Your Name]. I specialize in full-stack development with a focus on Android and JavaScript backend technologies.</p>
+        </div>
+    </section>
 
-header {
-    background-color: #333;
-    color: #fff;
-    padding: 1em 0;
-    text-align: center;
-}
+    <section id="skills">
+        <div class="container">
+            <h2>Skills</h2>
+            <ul>
+                <li>Android Development (Java/Kotlin)</li>
+                <li>Android SDK</li>
+                <li>Android Studio</li>
+                <li>MVVM/MVP Architecture</li>
+                <li>Node.js</li>
+                <li>Express.js</li>
+                <li>MongoDB</li>
+                <li>MySQL</li>
+                <li>RESTful APIs</li>
+                <li>WebSocket</li>
+                <li>Firebase</li>
+            </ul>
+        </div>
+    </section>
 
-header h1 {
-    margin: 0;
-}
+    <section id="projects">
+        <div class="container">
+            <h2>Projects</h2>
+            <!-- Add your projects here -->
+            <div class="project">
+                <h3>Project Name</h3>
+                <p>Description of the project.</p>
+                <a href="#">GitHub Link</a>
+            </div>
+            <!-- Add more projects as needed -->
+        </div>
+    </section>
 
-header p {
-    margin: 0;
-}
-
-section {
-    padding: 2em 0;
-}
-
-h2 {
-    color: #333;
-}
-
-ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-li {
-    margin-bottom: 5px;
-}
-
-footer {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 1em 0;
-}
-
-footer a {
-    color: #fff;
-    text-decoration: none;
-}
-
-.project {
-    background-color: #fff;
-    padding: 1em;
-    margin-bottom: 1em;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-.project h3 {
-    margin-top: 0;
-}
+    <footer>
+        <div class="container">
+            <p>Contact me: <a href="mailto:your-email@example.com">your-email@example.com</a> | <a href="https://www.linkedin.com/in/your-profile">LinkedIn</a> | <a href="https://github.com/your-username">GitHub</a></p>
+        </div>
+    </footer>
+</body>
+</html>
